# NetworkGeometry

./: .gitignore  colab_task15_run.ipynb  colab_task15_run_pool2.ipynb  paper_summary_EC_subspace_generalization.md  paper_summary_counting_manifolds.md  paper_summary_hierarchical_concept_geometry.md  paper_summary_multidim_features.md  paper_summary_symmetry_geometry.md  pyproject.toml  veronlika_paper_summary.md
docs/: SAE-explainer.md
docs/superpowers/plans/: 2026-07-04-llm-cycle-geometry-v1.md
docs/superpowers/specs/: 2026-07-04-llm-cycle-geometry-design.md
src/networkgeometry/: __init__.py  models.py  run.py  types.py
src/networkgeometry/analysis/: ladder.py  stage2.py
src/networkgeometry/extraction/: activations.py
src/networkgeometry/figures/: __init__.py  part1_plots.py  part2_plots.py
src/networkgeometry/geometry/: circle_fit.py  linalg.py  part1.py
src/networkgeometry/report/: build.py  findings_template.md
src/networkgeometry/sae/: gemma_scope.py
src/networkgeometry/stats/: cross.py  inference.py  within.py
src/networkgeometry/stimuli/: definitions.py
src/networkgeometry/stimuli/data/: structures.yaml  templates.yaml
src/networkgeometry/subspace/: auc.py
tests/: fixtures.py  test_models.py  test_types.py
tests/analysis/: test_ladder.py  test_stage2.py
tests/extraction/: test_activations.py
tests/figures/: test_plots.py
tests/geometry/: test_circle_fit.py  test_linalg.py  test_part1.py
tests/report/: test_build.py
tests/sae/: test_gemma_scope.py
tests/stats/: test_cross.py  test_inference.py  test_within.py
tests/stimuli/: test_definitions.py
tests/subspace/: test_auc.py
