[project]
name = "networkgeometry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shirley", email = "markshir@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "torch>=2.12.1",
    "transformer-lens>=3.5.1",
]

[project.scripts]
networkgeometry = "networkgeometry:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
markers = ["integration: requires downloading a model"]
addopts = "-m 'not integration'"
